--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div drawer>
         <paper-header-panel>
           <paper-toolbar id="drawerToolbar">
-            <div>Menu</div>
+            <div>Test</div>
           </paper-toolbar>
 
           <div class="drawerContent">
