Style title with Roboto Slab

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div drawer>
         <paper-header-panel>
           <paper-toolbar id="drawerToolbar">
-            <div>Menu</div>
+            <div id="menu-title">Menu</div>
           </paper-toolbar>
 
           <div class="drawerContent">
@@ -44,7 +44,7 @@
       <paper-header-panel main>
         <paper-toolbar id="mainToolbar">
           <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
-          <div class="title">De Pantarini's</div>
+          <div id="title" >De Pantarini's</div>
         </paper-toolbar>
         <div class="mainContent">
           <more-route-selector>
