--- a/elements.html
+++ b/elements.html
@@ -1,4 +1,5 @@
 <link rel="import" href="bower_components/font-roboto/roboto.html">
+<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100' rel='stylesheet' type='text/css'>
 
 <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="bower_components/paper-header-panel/paper-header-panel.html">
