Concerten en contact toevoegen

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <more-route-selector>
               <paper-menu>
                 <paper-item route="home">Home</paper-item>
+                <paper-item route="meedoen">Ik wil meedoen!</paper-item>
                 <paper-item route="leden">Leden</paper-item>
                 <paper-item route="fotos">Foto's</paper-item>
               </paper-menu>
@@ -52,6 +53,16 @@
               <section route="home">
                 <h1>Home</h1>
                 <p>De Pantarini's is het schoolorkest van het MHV Pantarijn in Wageningen.</p>
+                <br>
+                <strong>Concerten</strong>
+                <concerten-tabel></concerten-tabel>
+                <br>
+                <strong>Contact</strong>
+                <p>Wil je contact met ons opnemen? Stuur dan een e-mail naar pantarinis12@gmail.com!</p>
+              </section>
+              <section route="meedoen">
+                <h1>Meedoen</h1>
+                <p>We repeteren elke donderdag na het vijfde uur om 14:35 uur. <br>Zin om te komen kijken? Schroom niet! En neem je instrument mee!</p>
               </section>
               <section route="leden">
                 <h1>Leden</h1>
