--- a/routes.html
+++ b/routes.html
@@ -3,5 +3,6 @@
 <more-routing-config driver="hash"></more-routing-config>
 
 <more-route name="home" path="/"></more-route>
+<more-route name="meedoen" path="/meedoen"></more-route>
 <more-route name="leden" path="/leden"></more-route>
 <more-route name="fotos" path="/fotos"></more-route>
