--- a/elements.html
+++ b/elements.html
@@ -13,5 +13,6 @@
 <link rel="import" href="leden-kaart.html">
 <link rel="import" href="foto-lijst.html">
 <link rel="import" href="foto-kaart.html">
+<link rel="import" href="concerten-tabel.html">
 
 <link rel="import" href="routes.html">
