--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </head>
   <body class="fullbleed layout vertical">
 
+  <template is="dom-bind" id="app">
     <paper-drawer-panel id="drawerPanel">
       <div drawer>
         <paper-header-panel>
@@ -30,14 +31,20 @@
           </paper-toolbar>
 
           <div class="drawerContent">
-            <more-route-selector>
-              <paper-menu>
-                <paper-item route="home">Home</paper-item>
-                <paper-item route="meedoen">Ik wil meedoen!</paper-item>
-                <paper-item route="leden">Leden</paper-item>
-                <paper-item route="fotos">Foto's</paper-item>
-              </paper-menu>
-            </more-route-selector>
+            <paper-menu selected="{{route}}">
+              <paper-item>
+                <a href="/">Home</a>
+              </paper-item>
+              <paper-item>
+                <a href="/meedoen">Ik wil meedoen!</a>
+              </paper-item>
+              <paper-item>
+                <a href="/leden">Leden</a>
+              </paper-item>
+              <paper-item>
+                <a href="/fotos">Foto's</a>
+              </paper-item>
+            </paper-menu>
           </div>
         </paper-header-panel>
       </div>
@@ -48,37 +55,37 @@
           <div id="title" >De Pantarini's</div>
         </paper-toolbar>
         <div class="mainContent">
-          <more-route-selector>
-            <iron-pages>
-              <section route="home">
-                <h1>Home</h1>
-                <p>De Pantarini's is het schoolorkest van het MHV Pantarijn in Wageningen.</p>
-                <br>
-                <strong>Concerten</strong>
-                <concerten-tabel></concerten-tabel>
-                <br>
-                <strong>Contact</strong>
-                <p>Wil je contact met ons opnemen? Stuur dan een e-mail naar <a href="mailto:pantarinis12@gmail.com">pantarinis12@gmail.com</a>!</p>
-              </section>
-              <section route="meedoen">
-                <h1>Meedoen</h1>
-                <p>We repeteren bijna elke donderdag na het vijfde uur om 14:35 uur. <br>Zin om te komen kijken? Schroom niet! En neem je instrument mee!
-                Als je zeker wilt weten of we deze week repeteren, kun je altijd een mailtje sturen naar <a href="mailto:pantarinis12@gmail.com">pantarinis12@gmail.com</a></p>
-              </section>
-              <section route="leden">
-                <h1>Leden</h1>
-                <leden-lijst></leden-lijst>
-              </section>
-              <section route="fotos">
-                <h1>Foto's</h1>
-                <foto-lijst></foto-lijst>
-              </section>
-            </iron-pages>
-          </more-route-selector>
+          <iron-pages selected="{{route}}">
+            <section>
+              <h1>Home</h1>
+              <p>De Pantarini's is het schoolorkest van het MHV Pantarijn in Wageningen.</p>
+              <br>
+              <strong>Concerten</strong>
+              <concerten-tabel></concerten-tabel>
+              <br>
+              <strong>Contact</strong>
+              <p>Wil je contact met ons opnemen? Stuur dan een e-mail naar <a href="mailto:pantarinis12@gmail.com">pantarinis12@gmail.com</a>!</p>
+            </section>
+            <section>
+              <h1>Meedoen</h1>
+              <p>We repeteren bijna elke donderdag na het vijfde uur om 14:35 uur. <br>Zin om te komen kijken? Schroom niet! En neem je instrument mee!
+              Als je zeker wilt weten of we deze week repeteren, kun je altijd een mailtje sturen naar <a href="mailto:pantarinis12@gmail.com">pantarinis12@gmail.com</a></p>
+            </section>
+            <section>
+              <h1>Leden</h1>
+              <leden-lijst></leden-lijst>
+            </section>
+            <section>
+              <h1>Foto's</h1>
+              <foto-lijst></foto-lijst>
+            </section>
+          </iron-pages>
         </div>
       </paper-header-panel>
     </paper-drawer-panel>
+  </template>
 
+    <script src="bower_components/page/page.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
